--- a/#src/scss/main.scss
+++ b/#src/scss/main.scss
@@ -202,6 +202,7 @@ body {
 @import './pages/users/profile';
 
 @import './pages/orders/create';
+@import './pages/orders/succes';
 
 @import './pages/catalog/category-details';
 @import './pages/catalog/product';
