--- a/#src/scss/components/form.scss
+++ b/#src/scss/components/form.scss
@@ -34,6 +34,10 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+
+    @media screen and (max-width: 520px) {
+      padding: 20px;
+    }
   }
 
   // .form__controls
@@ -76,6 +80,10 @@
   &__bottom {
     display: flex;
     gap: 20px;
+
+    @media screen and (max-width: 520px) {
+      flex-direction: column-reverse;
+    }
   }
 
   // .form__submit
