--- a/#src/scss/components/popup.scss
+++ b/#src/scss/components/popup.scss
@@ -80,6 +80,7 @@ body::after {
   right: 10px;
   width: 30px;
   height: 30px;
+  z-index: 99;
 
   &::before,
   &::after {
@@ -101,6 +102,40 @@ body::after {
   &::after {
     transform: rotate(45deg);
   }
+}
+
+.popup__title {
+  text-align: center;
+  font-size: 30px;
+  line-height: 140%;
+  margin-bottom: 30px;
+}
+
+
+.popup__form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.popup__form-controls {
+  border: 1px solid rgba($color: $accent, $alpha: .4);
+  padding: 20px 10px;
+  outline: none;
+  border-radius: 6px;
+
+  &:focus {
+    border-color: rgba($color: $accent, $alpha: .9);
+  }
+}
+
+
+.popup__form-submit {
+  background-color: rgba($color: $accent, $alpha: 1.0);
+  padding: 20px 20px;
+  width: 100%;
+  color: rgba($color: $white, $alpha: 1.0);
+  border-radius: 6px;
 }
 
 .popup__subdomain-title {
@@ -139,4 +174,55 @@ body::after {
   font-size: 18px;
   border: 1px solid rgba($color: $accent, $alpha: .2);
   border-radius: 3px;
+}
+
+#success {
+
+  .popup__content {
+    min-height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.popup__success-image {
+  max-width: 250px;
+  width: 100%;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.popup__success-text {
+  font-size: 25px;
+  font-weight: 600;
+  margin-top: 30px;
+}
+
+.popup__loading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+  background-color: rgba($color: $white, $alpha: .5);
+
+  &._active {
+    pointer-events: all;
+    display: flex;
+  }
+
+  img {
+    width: 40px;
+    height: 40px;
+  }
 }
