--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: rgba($color: $hoverBtn, $alpha: 1.0);
-  padding: 79px 0px;
+  padding: 79px 0px 89px;
 
   // .footer__container
 
@@ -12,11 +12,29 @@
     display: flex;
     justify-content: space-between;
     gap: 127px;
+
+    @media screen and (max-width: 920px) {
+      gap: 50px;
+      flex-wrap: wrap;
+    }
+
+    @media screen and (max-width: 425px) {
+      flex-direction: column;
+    }
   }
 
   // .footer__logo
 
-  &__logo {}
+  &__logo {
+    @media screen and (max-width: 425px) {
+      width: 100px;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
 
   // .footer__menu
 
@@ -24,6 +42,12 @@
     flex: 1 1 auto;
     display: flex;
     justify-content: space-between;
+    gap: 20px;
+    flex-wrap: wrap;
+
+    @media screen and (max-width: 425px) {
+      flex-direction: column;
+    }
   }
 
   // .footer__list
@@ -62,7 +86,12 @@
 
   // .footer__contact
 
-  &__contact {}
+  &__contact {
+
+    @media screen and (max-width: 920px) {
+      width: 100%;
+    }
+  }
 
   // .footer__title
 
@@ -72,6 +101,23 @@
     font-weight: 600;
     line-height: 20px;
     margin-bottom: 20px;
+  }
+
+  // .footer__contact-inner
+
+  &__contact-inner {
+    @media screen and (max-width: 920px) {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+
+    @media screen and (max-width: 425px) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
 
   // .footer__contact-list
