--- a/#src/scss/global.scss
+++ b/#src/scss/global.scss
@@ -61,6 +61,10 @@ body {
 
 section {
   padding: 80px 0px;
+
+  @media screen and (max-width: 920px) {
+    padding: 40px 0px;
+  }
 }
 
 h1 {}
@@ -100,6 +104,14 @@ h5 {}
     font-size: inherit;
     line-height: inherit;
     font-weight: 600;
+  }
+
+  @media screen and (max-width: 768px) {
+    font-size: 35px;
+  }
+
+  @media screen and (max-width: 425px) {
+    font-size: 28px;
   }
 }
 
