--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -1,11 +1,22 @@
 .header {
   position: fixed;
   width: 100%;
-  bottom: 79px;
+  top: 30px;
   left: 0;
   z-index: 150;
   // pointer-events: none;
   transition: $animation_speed;
+
+  @media screen and (min-width: 920px) {
+    // top: 30px;
+  }
+
+  @media screen and (max-width: 920px) {
+    opacity: 0;
+    position: fixed;
+    pointer-events: none;
+    // top: 100%;
+  }
 
   // .header--single
 
@@ -16,19 +27,9 @@
   }
 
   &._active {
-    bottom: 79px;
+    top: calc(54% - 80px);
     opacity: 1;
     pointer-events: all;
-  }
-
-  @media screen and (min-width: 920px) {
-    top: 30px;
-  }
-
-  @media screen and (max-width: 920px) {
-    opacity: 0;
-    position: fixed;
-    bottom: -100%;
   }
 
   // .header__container
@@ -99,6 +100,15 @@
     }
   }
 
+  // .nav__item-inner
+
+  &__item-inner {
+    flex: 1 1 100%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
   // .nav__item
 
   &__item {
@@ -106,6 +116,10 @@
     align-items: center;
     gap: 5px;
     position: relative;
+
+    @media screen and (max-width: 920px) {
+      width: 100%;
+    }
 
     a {
       display: inline-flex;
@@ -138,21 +152,46 @@
         }
       }
     }
+
+
+    @media screen and (max-width: 920px) {
+      flex-wrap: wrap;
+    }
+
+    &._active {
+      .submenu {
+        display: block;
+      }
+    }
+
   }
+
+  // .nav__chevron
+
+  &__chevron {}
 }
 
 .submenu {
-  position: absolute;
-  top: 170%;
-  left: 0;
-  pointer-events: none;
-  opacity: 0;
   background-color: rgba($color: $white, $alpha: 1.0);
   border-radius: 0px 0px 5px 5px;
   min-width: 250px;
   box-shadow: 0px 4px 8px 0px rgba(65, 162, 208, 0.15), 0px 15px 15px 0px rgba(65, 162, 208, 0.13), 0px 33px 20px 0px rgba(65, 162, 208, 0.08), 0px 59px 24px 0px rgba(65, 162, 208, 0.02), 0px 93px 26px 0px rgba(65, 162, 208, 0);
   transition: .3s;
 
+
+  @media screen and (min-width: 920px) {
+    position: absolute;
+    top: 170%;
+    left: 0;
+    pointer-events: none;
+    opacity: 0;
+  }
+
+  @media screen and (max-width: 920px) {
+    background-color: transparent;
+    display: none;
+
+  }
 
   li {
     transition: $animation_speed;
@@ -169,8 +208,13 @@
           background-color: rgba($color: $mainColor, $alpha: .05);
         }
       }
+
+      @media screen and (max-width: 920px) {
+        color: rgba($color: $white, $alpha: 1.0);
+      }
     }
   }
+
 }
 
 .header-under {
@@ -186,6 +230,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 20px;
   }
 
   // .header-under__logo
@@ -199,11 +244,21 @@
       height: 100%;
       object-fit: cover;
     }
+
+    @media screen and (max-width: 425px) {
+      width: 80px;
+      height: 80px;
+    }
   }
 
   // .header-under__address
 
-  &__address {}
+  &__address {
+
+    @media screen and (max-width: 1024px) {
+      display: none;
+    }
+  }
 
   // .header-under__address-title
 
@@ -257,6 +312,12 @@
       align-items: center;
       gap: 10px;
       font-family: Montserrat;
+    }
+
+    @media screen and (max-width: 425px) {
+      flex-direction: column;
+      align-items: flex-end;
+      gap: 15px;
     }
   }
 }
