--- a/#src/scss/pages/about.scss
+++ b/#src/scss/pages/about.scss
@@ -15,6 +15,11 @@
     grid-template-columns: 1fr 300px;
     gap: 70px;
     width: 100%;
+
+    @media screen and (max-width: 920px) {
+      grid-template-columns: 1fr;
+      gap: 30px;
+    }
   }
 
   // .about__grid-item
@@ -36,6 +41,12 @@
       object-position: top;
       border-radius: 8px;
       margin-top: 30px;
+    }
+
+    &:nth-child(2) {
+      @media screen and (max-width: 920px) {
+        display: none;
+      }
     }
   }
 
