--- a/#src/scss/pages/catalog/category-details.scss
+++ b/#src/scss/pages/catalog/category-details.scss
@@ -1,9 +1,5 @@
 .category-details {
-  padding: 60px 60px;
-
-  @media screen and (max-width: 920px) {
-    padding: 60px 20px;
-  }
+  padding: 60px 0px;
 
   // .category-details__container
 
@@ -71,17 +67,13 @@
       padding: 30px 20px;
       min-width: 290px;
 
-      @media screen and (min-width: 1200px) {
-        position: sticky;
-        top: 105px;
-      }
-
       @media screen and (max-width: 1200px) {
         position: fixed;
         top: 0;
         left: -150%;
-        max-width: 400px;
-        height: 100vh;
+        width: 100%;
+        height: calc(100vh - 80px);
+        overflow-y: auto;
         background-color: rgba($color: $white, $alpha: 1.0);
         padding: 30px;
         z-index: 101;
@@ -168,5 +160,18 @@
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 20px;
+  }
+
+  // .filter__submit
+
+  &__submit {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba($color: $accent, $alpha: 1.0);
+    color: rgba($color: $white, $alpha: 1.0);
+    border-radius: 5px;
   }
 }
