--- a/#src/scss/pages/gallery/gallery.scss
+++ b/#src/scss/pages/gallery/gallery.scss
@@ -10,6 +10,14 @@
     display: flex;
     align-items: flex-start;
     gap: 50px;
+
+    @media screen and (max-width: 1200px) {
+      gap: 20px;
+    }
+
+    @media screen and (max-width: 1024px) {
+      flex-direction: column;
+    }
   }
 
   // .gallery__category
@@ -19,8 +27,6 @@
     flex-direction: column;
     flex-wrap: wrap;
     gap: 10px;
-    position: sticky;
-    top: 100px;
     padding: 30px 20px;
     border-radius: 15px;
     background-color: rgba($color: $white, $alpha: 1.0);
@@ -28,7 +34,18 @@
     box-shadow: 0px 8px 17px 0px rgba(65, 162, 208, 0.1), 0px 30px 30px 0px rgba(65, 162, 208, 0.09), 0px 68px 41px 0px rgba(65, 162, 208, 0.05), 0px 121px 48px 0px rgba(65, 162, 208, 0.01), 0px 188px 53px 0px rgba(65, 162, 208, 0);
 
     @media screen and (min-width: 920px) {
-      min-width: 350px;
+      min-width: 310px;
+    }
+
+    @media screen and (min-width: 1024px) {
+      position: sticky;
+      top: 100px;
+    }
+
+    @media screen and (max-width: 1024px) {
+      width: 100%;
+      flex-direction: row;
+      min-width: none;
     }
   }
 
@@ -70,8 +87,9 @@
   // .gallery__images-grid
   &__images-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
+
   }
 
   // .gallery__image
