--- a/#src/scss/pages/service/service-detail.scss
+++ b/#src/scss/pages/service/service-detail.scss
@@ -11,6 +11,10 @@
 
     .service-content__row {
       flex-direction: row-reverse;
+
+      @media screen and (max-width: 1024px) {
+        flex-direction: column-reverse;
+      }
     }
 
   }
@@ -37,6 +41,12 @@
     display: flex;
     align-items: center;
     gap: 60px;
+
+    @media screen and (max-width: 1024px) {
+      gap: 30px;
+      flex-direction: column;
+    }
+
   }
 
   // .service-content__col
@@ -100,6 +110,9 @@
   &__btn {
     width: 290px;
     margin-top: 50px;
-    // height: 50px;
+
+    @media screen and (max-width: 425px) {
+      width: 100%;
+    }
   }
 }
