--- a/#src/templates/theme/components/footer.html
+++ b/#src/templates/theme/components/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<footer class="footer" style="display: none">
+<footer class="footer">
   <div class="footer__container">
     <div class="footer__inner">
       <div class="footer__logo">
@@ -32,24 +32,26 @@
       </div>
       <div class="footer__contact">
         <p class="footer__title">Контакты</p>
-        <div class="footer__contact-list">
-          <a href="tel:+73822210915">+7(3822) 210-915</a>
-          <a href="tel:+79009210915">+7-900-921-09-15</a>
-          <button type="button">Обратный звонок</button>
-        </div>
-        <div class="footer__contact-list">
-          <p class="footer__contact-city">г.Томск</p>
-          <p class="footer__contact-address">Яковлева, 41а</p>
-          <p class="footer__contact-address">Ново-Трактовая улица, 15</p>
-          <p class="footer__contact-address">Демьяна Бедного, 16а ст1</p>
-        </div>
-        <div class="footer__contact-list">
-          <p class="footer__contact-city">Время работы:</p>
-          <p class="footer__contact-address">Пн-Вт: 09:00-18:00</p>
-          <p class="footer__contact-address">Сб-Вс: 10:00-17:00</p>
-        </div>
-        <div class="footer__contact-list">
-          <a href="mailto:Zakaz.2024@yandex.ru" class="footer__contact-email">Zakaz.2024@yandex.ru</a>
+        <div class="footer__contact-inner">
+          <div class="footer__contact-list">
+            <a href="tel:+73822210915">+7(3822) 210-915</a>
+            <a href="tel:+79009210915">+7-900-921-09-15</a>
+            <button type="button">Обратный звонок</button>
+          </div>
+          <div class="footer__contact-list">
+            <p class="footer__contact-city">г.Томск</p>
+            <p class="footer__contact-address">Яковлева, 41а</p>
+            <p class="footer__contact-address">Ново-Трактовая улица, 15</p>
+            <p class="footer__contact-address">Демьяна Бедного, 16а ст1</p>
+          </div>
+          <div class="footer__contact-list">
+            <p class="footer__contact-city">Время работы:</p>
+            <p class="footer__contact-address">Пн-Вт: 09:00-18:00</p>
+            <p class="footer__contact-address">Сб-Вс: 10:00-17:00</p>
+          </div>
+          <div class="footer__contact-list">
+            <a href="mailto:Zakaz.2024@yandex.ru" class="footer__contact-email">Zakaz.2024@yandex.ru</a>
+          </div>
         </div>
       </div>
     </div>
