--- a/#src/templates/theme/pages/populate.html
+++ b/#src/templates/theme/pages/populate.html
@@ -11,35 +11,43 @@
           <div class="filter__body">
             <p class="filter__label">Состав букета:</p>
             <div class="form__group-boolean">
-              <input type="checkbox" name="composition-bouquet" class="form__controls-checkbox" id="rose" value="Розы" />
+              <input type="checkbox" name="composition-bouquet" class="form__controls-checkbox" id="rose"
+                value="Розы" />
               <label for="rose" class="form__boolean-label">Розы</label>
             </div>
             <div class="form__group-boolean">
-              <input type="checkbox" name="composition-bouquet" class="form__controls-checkbox" id="hrizantema" value="Хризантема" />
+              <input type="checkbox" name="composition-bouquet" class="form__controls-checkbox" id="hrizantema"
+                value="Хризантема" />
               <label for="hrizantema" class="form__boolean-label">Хризантема</label>
             </div>
             <div class="form__group-boolean">
-              <input type="checkbox" name="composition-bouquet" class="form__controls-checkbox" id="kustovaya-rosa" value="Кустовая роза" />
+              <input type="checkbox" name="composition-bouquet" class="form__controls-checkbox" id="kustovaya-rosa"
+                value="Кустовая роза" />
               <label for="kustovaya-rosa" class="form__boolean-label">Кустовая роза</label>
             </div>
             <div class="form__group-boolean">
-              <input type="checkbox" name="composition-bouquet" class="form__controls-checkbox" id="tylpany" value="Тюльпаны" />
+              <input type="checkbox" name="composition-bouquet" class="form__controls-checkbox" id="tylpany"
+                value="Тюльпаны" />
               <label for="tylpany" class="form__boolean-label">Тюльпаны</label>
             </div>
             <div class="form__group-boolean">
-              <input type="checkbox" name="composition-bouquet" class="form__controls-checkbox" id="orhidei" value="Орхидеи" />
+              <input type="checkbox" name="composition-bouquet" class="form__controls-checkbox" id="orhidei"
+                value="Орхидеи" />
               <label for="orhidei" class="form__boolean-label">Орхидеи</label>
             </div>
             <div class="form__group-boolean">
-              <input type="checkbox" name="composition-bouquet" class="form__controls-checkbox" id="iris" value="Ирисы" />
+              <input type="checkbox" name="composition-bouquet" class="form__controls-checkbox" id="iris"
+                value="Ирисы" />
               <label for="iris" class="form__boolean-label">Ирисы</label>
             </div>
             <div class="form__group-boolean">
-              <input type="checkbox" name="composition-bouquet" class="form__controls-checkbox" id="gerbery" value="Герберы" />
+              <input type="checkbox" name="composition-bouquet" class="form__controls-checkbox" id="gerbery"
+                value="Герберы" />
               <label for="gerbery" class="form__boolean-label">Герберы</label>
             </div>
             <div class="form__group-boolean">
-              <input type="checkbox" name="composition-bouquet" class="form__controls-checkbox" id="eustomy" value="Эустомы" />
+              <input type="checkbox" name="composition-bouquet" class="form__controls-checkbox" id="eustomy"
+                value="Эустомы" />
               <label for="eustomy" class="form__boolean-label">Эустомы</label>
             </div>
           </div>
@@ -78,40 +86,15 @@
       </div>
       <div class="category-details__col">
         <div class="index-catalog__cards cards-catalog">
-          {% if products %} {% for product in products %}
-          <div class="index-catalog__card card">
-            <div class="card__image">
-              {% if product.image %} {% thumbnail product.image "368x350" format="WEBP" crop="center" as im %}
-              <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
-              {% endthumbnail %}
-              <img src="{% static 'theme/mb/images/product-2.jpeg' %}" alt="" />
-              {% else %}
-              <img src="{% static 'theme/mb/images/product-2.jpeg' %}" alt="" />
-              {% endif %}
-              <button type="button" class="card__hit">
-                <img src="{% static 'theme/mb/images/hit.svg' %}" alt="" />
-              </button>
-              <button type="button" class="card__click" id="one-click">Купить в один клик</button>
-            </div>
-            <div class="card__content">
-              <h3 class="card__title-h3">{{ product.name }}</h3>
-              <div class="card__content-bottom">
-                {% if product.sale_price %}
-                <span class="card__price">{{ product.sale_price }} <span class="currency">₽</span></span>
-                {% else %}
-                <span class="card__price">{{ product.price }} <span class="currency">₽</span></span>
-                {% endif %}
-                <a href="{% url 'cart_add' %}" class="card__cart add-to-cart" data-product-id="{{ product.id }}">
-                  {% csrf_token %}
-                  <img src="{% static 'theme/mb/images/cart.svg' %}" alt="" />
-                </a>
-                <button type="button" class="card__favorit">
-                  <img src="{% static 'theme/mb/images/favorit.svg' %}" alt="" />
-                </button>
-              </div>
-            </div>
+          {% if products %}
+          {% for product in products %}
+          {% include '../includes/card.html' with product=product %}
+          {% endfor %}
+          {% else %}
+          <div class="empty-info">
+            <p>Товара нет</p>
           </div>
-          {% endfor %} {% endif %}
+          {% endif %}
         </div>
       </div>
     </div>
