--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -407,6 +407,7 @@ html.lock body::before {
 }
 
 .index-catalog__category {
+  min-width: 225px;
   flex: 1 1 24%;
   display: flex;
   flex-direction: column;
@@ -434,7 +435,7 @@ html.lock body::before {
 
 .index-catalog__cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
   gap: 40px;
   width: 100%;
 }
@@ -445,7 +446,7 @@ html.lock body::before {
 }
 
 .card__image {
-  width: 230px;
+  width: 100%;
   height: 230px;
 }
 
@@ -492,10 +493,37 @@ html.lock body::before {
   color: white;
 }
 
+.filter-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 .filter {
   display: flex;
   align-items: center;
   gap: 35px;
+}
+
+.filter__inner {
+  overflow-y: auto;
+  max-height: 450px;
+  height: 100%;
+  padding: 10px 0px;
+}
+
+.filter__inner::-webkit-scrollbar {
+  width: 2px;
+  /* ширина всей полосы прокрутки */
+}
+
+.filter__inner::-webkit-scrollbar-track {
+  background: rgba(65, 162, 208, 0.05);
+}
+
+.filter__inner::-webkit-scrollbar-thumb {
+  background-color: rgba(58, 67, 75, 0.05);
+  /* отступ вокруг бегунка */
 }
 
 .filter__item {
@@ -531,7 +559,7 @@ html.lock body::before {
 
 .index-work__title {
   color: rgb(31, 31, 31);
-  font-size: 56px;
+  font-size: clamp(35px, 4vw, 56px);
   font-weight: 400;
   line-height: 121%;
   margin-bottom: 20px;
@@ -556,21 +584,20 @@ html.lock body::before {
 }
 
 .index-work__grid {
-  display: grid;
+  display: none;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 245px);
   gap: 10px;
+}
+
+.index-work__grid._active {
+  display: grid;
 }
 
 .index-work__item {
   overflow: hidden;
   border-radius: 16px;
   box-shadow: 0px 8px 17px 0px rgba(65, 162, 208, 0.1), 0px 30px 30px 0px rgba(65, 162, 208, 0.09), 0px 68px 41px 0px rgba(65, 162, 208, 0.05), 0px 121px 48px 0px rgba(65, 162, 208, 0.01), 0px 188px 53px 0px rgba(65, 162, 208, 0);
-}
-
-.index-work__item:first-child {
-  grid-column: span 1;
-  grid-row: span 2;
 }
 
 .index-work__item img {
@@ -586,6 +613,7 @@ html.lock body::before {
 .index-reviews__inner {
   display: grid;
   grid-template-columns: 290px 1fr;
+  align-items: center;
   gap: 58px;
 }
 
@@ -594,7 +622,10 @@ html.lock body::before {
   font-size: 20px;
   line-height: 150%;
   color: #41a2d0;
-  margin-bottom: 96px;
+}
+
+.index-reviews__reviews {
+  min-width: 0;
 }
 
 .reviews__text {
@@ -610,7 +641,7 @@ html.lock body::before {
 
 .reviews__slider {
   height: 100% !important;
-  padding: 10px 10px;
+  padding: 25px 10px;
 }
 
 .reviews__slide {
@@ -651,7 +682,7 @@ html.lock body::before {
 .index-contact__title {
   font-size: 40px;
   font-weight: 600;
-  line-height: 49px;
+  line-height: 130%;
   letter-spacing: -3%;
   text-align: left;
   margin-bottom: 50px;
@@ -676,7 +707,7 @@ html.lock body::before {
 .index-contact__list-text {
   font-size: 24px;
   font-weight: 500;
-  line-height: 29px;
+  line-height: 130%;
   letter-spacing: -3%;
   text-align: left;
 }
@@ -892,6 +923,10 @@ html.lock body::before {
   margin-top: 10px;
 }
 
+.swiper-pagination-bullet {
+  background-color: #41a2d0;
+}
+
 .about__grid {
   display: grid;
   grid-template-columns: 1fr 300px;
@@ -949,14 +984,14 @@ html.lock body::before {
 .header {
   position: fixed;
   width: 100%;
-  bottom: 79px;
+  top: 30px;
   left: 0;
   z-index: 150;
   transition: 0.5s;
 }
 
 .header._active {
-  bottom: 79px;
+  top: calc(54% - 80px);
   opacity: 1;
   pointer-events: all;
 }
@@ -995,6 +1030,13 @@ html.lock body::before {
   justify-content: space-between;
 }
 
+.nav__item-inner {
+  flex: 1 1 100%;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
 .nav__item {
   display: flex;
   align-items: center;
@@ -1016,12 +1058,11 @@ html.lock body::before {
   transition: 0.3s;
 }
 
+.nav__item._active .submenu {
+  display: block;
+}
+
 .submenu {
-  position: absolute;
-  top: 170%;
-  left: 0;
-  pointer-events: none;
-  opacity: 0;
   background-color: white;
   border-radius: 0px 0px 5px 5px;
   min-width: 250px;
@@ -1048,6 +1089,7 @@ html.lock body::before {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 20px;
 }
 
 .header-under__logo {
@@ -1110,7 +1152,7 @@ html.lock body::before {
 
 .footer {
   background-color: #29779c;
-  padding: 79px 0px;
+  padding: 79px 0px 89px;
 }
 
 .footer__inner {
@@ -1119,10 +1161,17 @@ html.lock body::before {
   gap: 127px;
 }
 
+.footer__logo img {
+  width: 100%;
+  height: 100%;
+}
+
 .footer__menu {
   flex: 1 1 auto;
   display: flex;
   justify-content: space-between;
+  gap: 20px;
+  flex-wrap: wrap;
 }
 
 .footer__list {
@@ -1684,6 +1733,7 @@ body::after {
   right: 10px;
   width: 30px;
   height: 30px;
+  z-index: 99;
 }
 
 .popup__close::before,
@@ -1705,6 +1755,38 @@ body::after {
 
 .popup__close::after {
   transform: rotate(45deg);
+}
+
+.popup__title {
+  text-align: center;
+  font-size: 30px;
+  line-height: 140%;
+  margin-bottom: 30px;
+}
+
+.popup__form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.popup__form-controls {
+  border: 1px solid rgba(65, 162, 208, 0.4);
+  padding: 20px 10px;
+  outline: none;
+  border-radius: 6px;
+}
+
+.popup__form-controls:focus {
+  border-color: rgba(65, 162, 208, 0.9);
+}
+
+.popup__form-submit {
+  background-color: #41a2d0;
+  padding: 20px 20px;
+  width: 100%;
+  color: white;
+  border-radius: 6px;
 }
 
 .popup__subdomain-title {
@@ -1743,6 +1825,54 @@ body::after {
   font-size: 18px;
   border: 1px solid rgba(65, 162, 208, 0.2);
   border-radius: 3px;
+}
+
+#success .popup__content {
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.popup__success-image {
+  max-width: 250px;
+  width: 100%;
+}
+
+.popup__success-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.popup__success-text {
+  font-size: 25px;
+  font-weight: 600;
+  margin-top: 30px;
+}
+
+.popup__loading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.popup__loading._active {
+  pointer-events: all;
+  display: flex;
+}
+
+.popup__loading img {
+  width: 40px;
+  height: 40px;
 }
 
 .mobile-nav {
@@ -2547,8 +2677,26 @@ body::after {
   padding: 30px;
 }
 
+.order-succes__inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+}
+
+.order-succes__image {
+  max-width: 300px;
+  width: 100%;
+  height: 100%;
+}
+
+.order-succes__title {
+  color: #41a2d0;
+  font-weight: 600;
+}
+
 .category-details {
-  padding: 60px 60px;
+  padding: 60px 0px;
 }
 
 .category-details__title {
@@ -2649,6 +2797,17 @@ body::after {
   font-size: 18px;
   font-weight: 600;
   margin-bottom: 20px;
+}
+
+.filter__submit {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #41a2d0;
+  color: white;
+  border-radius: 5px;
 }
 
 .product__description {
@@ -2922,8 +3081,6 @@ body::after {
   flex-direction: column;
   flex-wrap: wrap;
   gap: 10px;
-  position: sticky;
-  top: 100px;
   padding: 30px 20px;
   border-radius: 15px;
   background-color: white;
@@ -2957,7 +3114,7 @@ body::after {
 
 .gallery__images-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
 }
 
@@ -2992,7 +3149,7 @@ body::after {
   height: 100vh;
   width: 450px;
   background-color: #ffffff;
-  z-index: 101;
+  z-index: 201;
   box-shadow: 0px 0px 10px rgba(58, 67, 75, 0.1);
   border-radius: 10px 0px 0px 10px;
   padding: 70px 20px 50px;
@@ -3197,6 +3354,25 @@ body::after {
   right: 0%;
 }
 
+#show-cart {
+  position: relative;
+}
+
+.count-product-cart {
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  padding: 10px;
+  max-width: 20px;
+  max-height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  color: white;
+  background-color: #41a2d0;
+}
+
 .success {
   position: fixed;
   top: 20px;
@@ -3316,16 +3492,29 @@ body::after {
 }
 
 @media screen and (min-width: 920px) {
+  .index-work__item:first-child {
+    grid-column: span 1;
+    grid-row: span 2;
+  }
+
+  .index-reviews__text {
+    margin-bottom: 96px;
+  }
+
   .header--single {
     position: sticky;
   }
 
-  .header {
-    top: 30px;
-  }
-
   .header__inner {
     height: 46px;
+  }
+
+  .submenu {
+    position: absolute;
+    top: 170%;
+    left: 0;
+    pointer-events: none;
+    opacity: 0;
   }
 
   .mobile-nav {
@@ -3333,7 +3522,7 @@ body::after {
   }
 
   .gallery__category {
-    min-width: 350px;
+    min-width: 310px;
   }
 }
 
@@ -3362,14 +3551,16 @@ body::after {
   }
 }
 
+@media screen and (min-width: 1024px) {
+  .gallery__category {
+    position: sticky;
+    top: 100px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .category-details__col .close {
     display: none;
-  }
-
-  .category-details__col:nth-child(1) {
-    position: sticky;
-    top: 105px;
   }
 
   .category-details .category-details__filter {
@@ -3378,6 +3569,11 @@ body::after {
 }
 
 @media screen and (max-width: 1200px) {
+  .filter {
+    gap: 20px;
+    flex-wrap: wrap;
+  }
+
   .category-details__row {
     flex-direction: column;
   }
@@ -3390,8 +3586,9 @@ body::after {
     position: fixed;
     top: 0;
     left: -150%;
-    max-width: 400px;
-    height: 100vh;
+    width: 100%;
+    height: calc(100vh - 80px);
+    overflow-y: auto;
     background-color: white;
     padding: 30px;
     z-index: 101;
@@ -3406,6 +3603,10 @@ body::after {
   .category-details .cards-catalog {
     grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
   }
+
+  .gallery__inner {
+    gap: 20px;
+  }
 }
 
 @media screen and (max-width: 1042px) {
@@ -3415,6 +3616,43 @@ body::after {
 
   .nav__item a {
     font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .index-work__links {
+    gap: 20px;
+  }
+
+  .index-work__links a {
+    font-size: 20px;
+  }
+
+  .hero__image {
+    display: none;
+  }
+
+  .header-under__address {
+    display: none;
+  }
+
+  .service-content:nth-child(odd) .service-content__row {
+    flex-direction: column-reverse;
+  }
+
+  .service-content__row {
+    gap: 30px;
+    flex-direction: column;
+  }
+
+  .gallery__inner {
+    flex-direction: column;
+  }
+
+  .gallery__category {
+    width: 100%;
+    flex-direction: row;
+    min-width: none;
   }
 }
 
@@ -3443,10 +3681,35 @@ body::after {
     display: none;
   }
 
+  .index-work__grid {
+    grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
+    grid-template-rows: auto;
+  }
+
+  .index-reviews__inner {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+
+  .index-reviews__info {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+  }
+
+  .about__grid {
+    grid-template-columns: 1fr;
+    gap: 30px;
+  }
+
+  .about__grid-item:nth-child(2) {
+    display: none;
+  }
+
   .header {
     opacity: 0;
     position: fixed;
-    bottom: -100%;
+    pointer-events: none;
   }
 
   .header__container {
@@ -3465,12 +3728,58 @@ body::after {
     flex-direction: column;
   }
 
-  .category-details {
-    padding: 60px 20px;
+  .nav__item {
+    width: 100%;
+  }
+
+  .nav__item {
+    flex-wrap: wrap;
+  }
+
+  .submenu {
+    background-color: transparent;
+    display: none;
+  }
+
+  .submenu li a {
+    color: white;
+  }
+
+  .footer__inner {
+    gap: 50px;
+    flex-wrap: wrap;
+  }
+
+  .footer__contact {
+    width: 100%;
+  }
+
+  .footer__contact-inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    flex-wrap: wrap;
+  }
+
+  section {
+    padding: 40px 0px;
   }
 }
 
 @media screen and (max-width: 768px) {
+  .index-work__links {
+    flex-wrap: wrap;
+  }
+
+  .hero__title {
+    font-size: 35px;
+  }
+
+  ._title-h2 {
+    font-size: 35px;
+  }
+
   .index-slider {
     padding: 0px 20px 60px;
   }
@@ -3515,6 +3824,10 @@ body::after {
   .index-category__title {
     font-size: 25px;
   }
+
+  .contact__grid {
+    grid-template-columns: 1fr;
+  }
 }
 
 @media screen and (max-width: 650px) {
@@ -3525,6 +3838,26 @@ body::after {
 }
 
 @media screen and (max-width: 620px) {
+  .index-stock {
+    padding: 40px 0px 40px;
+  }
+
+  .index-catalog {
+    padding: 40px 0px 40px;
+  }
+
+  .index-work {
+    padding: 40px 0px;
+  }
+
+  .index-reviews {
+    padding: 40px 0px;
+  }
+
+  .index-contact {
+    padding: 40px 0px;
+  }
+
   .mini-cart {
     width: 100%;
     height: 100vh;
@@ -3535,6 +3868,12 @@ body::after {
 @media screen and (max-width: 600px) {
   .category-details .category-details__filter {
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .top-main__cart {
+    display: none !important;
   }
 }
 
@@ -3567,17 +3906,119 @@ body::after {
   .index-stock__item-discount {
     font-size: 40px;
   }
+
+  .index-reviews__info {
+    flex-wrap: wrap;
+  }
+
+  .index-reviews__text {
+    text-align: center;
+  }
+
+  .index-contact__grid {
+    grid-template-columns: 1fr;
+    padding: 30px 0px 0px;
+  }
+
+  .index-contact__item:nth-child(2) {
+    display: none;
+  }
+
+  .index-contact__item:nth-child(1) {
+    padding: 0px 20px;
+  }
+
+  .index-contact__title {
+    font-size: 30px;
+  }
+
+  .index-contact__list-text {
+    font-size: 17px;
+  }
+
+  .form__inner {
+    padding: 20px;
+  }
+
+  .form__bottom {
+    flex-direction: column-reverse;
+  }
 }
 
 @media screen and (max-width: 425px) {
+  .hero__buttons {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .hero__button {
+    width: 100%;
+  }
+
+  .hero__button--small::before {
+    position: relative;
+    top: 0;
+    left: 0;
+    opacity: 1;
+    pointer-events: all;
+    transform: translateX(0);
+    border: none;
+  }
+
+  .header-under__logo {
+    width: 80px;
+    height: 80px;
+  }
+
+  .header-under__action {
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 15px;
+  }
+
+  .footer__inner {
+    flex-direction: column;
+  }
+
+  .footer__logo {
+    width: 100px;
+  }
+
+  .footer__menu {
+    flex-direction: column;
+  }
+
+  .footer__contact-inner {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  ._title-h2 {
+    font-size: 28px;
+  }
+
   .popup__content {
     padding: 40px 20px 60px;
+  }
+
+  .item-contact:last-child {
+    min-height: 350px;
+  }
+
+  .service-content__btn {
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 390px) {
   .top-main__address {
     font-size: 10px;
+  }
+}
+
+@media (max-width: 920px) and (min-width: 520px) {
+  .reviews__btn {
+    width: 290px;
   }
 }
 
