--- a/main/core/theme/mb/templates/components/header.html
+++ b/main/core/theme/mb/templates/components/header.html
@@ -2,7 +2,7 @@
 <div class="header">
   <div class="header__container">
     <div class="header__inner">
-      <button type="button" class="header__callback">
+      <button type="button" class="header__callback" data-popup="callback">
         Заказать звонок
         <img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="" />
       </button>
