--- a/main/core/theme/mb/templates/components/popup.html
+++ b/main/core/theme/mb/templates/components/popup.html
@@ -1,16 +1,49 @@
+{% load static %}
 <div id="subdomain" aria-hidden="true" class="popup">
   <div class="popup__wrapper">
     <div class="popup__content">
       <button data-close type="button" class="popup__close sssss"></button>
       <h2 class="popup__subdomain-title">Выбирете город</h2>
       <form action="" class="form">
-        <input type="search" id="search-city" class="popup__search-city" name="search-city" placeholder="Поиск города" />
+        <input type="search" id="search-city" class="popup__search-city" name="search-city"
+          placeholder="Поиск города" />
       </form>
       <div class="popup__subdomain-grid">
         {% for subdomain in subdomains %}
         <a href="#" class="popup__subdomain-link">{{ subdomain.name }}</a>
         {% endfor %}
       </div>
+    </div>
+  </div>
+</div>
+
+<div id="callback" aria-hidden="true" class="popup">
+  <div class="popup__wrapper">
+    <div class="popup__content">
+      <button data-close type="button" class="popup__close"></button>
+      <div class="popup__loading">
+        <img src="{% static 'theme/mb/images/loading.gif' %}" alt="">
+      </div>
+      <h2 class="popup__title">Заказ обратного звонка</h2>
+      <form action="{% url 'callback' %}" class="popup__form" method="POST" id="callback-form">
+        {% csrf_token %}
+        <input type="text" name="name" class="popup__form-controls" placeholder="Ваше имя" required />
+        <input type="text" name="phone" class="popup__form-controls" placeholder="номер телефона" data-tel-input
+          required />
+        <button type="submit" class="popup__form-submit">Отправить</button>
+      </form>
+    </div>
+  </div>
+</div>
+
+<div id="success" aria-hidden="true" class="popup">
+  <div class="popup__wrapper">
+    <div class="popup__content">
+      <button data-close type="button" class="popup__close"></button>
+      <div class="popup__success-image">
+        <img src="{% static 'theme/mb/images/tick.png' %}" alt="Обратный звонок" title="Обратный звонок" />
+      </div>
+      <p class="popup__success-text">Сообщение успешно отправлено</p>
     </div>
   </div>
 </div>
