--- a/main/core/theme/mb/templates/pages/catalog/category.html
+++ b/main/core/theme/mb/templates/pages/catalog/category.html
@@ -24,28 +24,7 @@
         <div class="category-details__col">
           <button type="button" class="category-details__filter"><i class="fa-solid fa-arrow-up-wide-short"></i></button>
           {% if products %}
-          <div class="index-catalog__cards">
-            {% for product in products %}
-            <div class="index-catalog__card card">
-              <div class="card__image">
-                <img src="{{ product.image.url }}" alt="" />
-                {% comment %} {{ product.image.url }} {% if product.image %} {% thumbnail product.image "230x230" format="WEBP" crop="center" as im %}
-                <img src="{{ im }}" width="{{ im.width }}" height="{{ im.height }}" class="product-click-image" alt="{{product.model}}" title="{{product.model}}" />
-                {% endthumbnail %} {% else %}
-                <img src="{% static 'theme/mb/images/no-image.png' %}" alt="" />
-                {% endif %} {% endcomment %}
-              </div>
-              <div class="card__content">
-                <a href="#" class="card__content-title">{{ product.model }}</a>
-                {% for chr in product.chars.all %} {% if chr.char_name.filter_name == "material" and forloop.counter <= 2 %}
-                <p class="card__content-char">Материал: {{ chr }}</p>
-                {% endif %} {% endfor %}
-                <div class="card__content-price">От {{ product.price }} ₽</div>
-              </div>
-              <a href="{{ product.get_absolute_url }}" class="card__content-link">Подробнее</a>
-            </div>
-            {% endfor %}
-          </div>
+          <div class="index-catalog__cards">{% for product in products %} {% include "../../includes/card.html" with product=product %} {% endfor %}</div>
           {% else %}
           <div class="empty-info">
             <p>Товара нет</p>
