--- a/main/core/theme/mb/templates/pages/index.html
+++ b/main/core/theme/mb/templates/pages/index.html
@@ -7,15 +7,13 @@
         <div class="top-main__left">
           <div class="top-main__item">
             <div class="top-main__address">Яковлева, 41а</div>
-            <a href="tel:+73822210915" class="top-main__phone"
-              >+7(3822)-210-915
+            <a href="tel:+73822210915" class="top-main__phone">+7(3822)-210-915
               <img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="" />
             </a>
           </div>
           <div class="top-main__item">
             <div class="top-main__address">Демьяна Бедного, 16а ст1</div>
-            <a href="tel:+73822224018" class="top-main__phone"
-              >+7(3822)-224-018
+            <a href="tel:+73822224018" class="top-main__phone">+7(3822)-224-018
               <img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="" />
             </a>
           </div>
@@ -33,7 +31,7 @@
             </button>
           </div>
           <div class="top-main__right-row">
-            <button type="button" class="top-main__callback">
+            <button type="button" class="top-main__callback" data-popup="callback">
               Заказать звонок
               <img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="" />
             </button>
@@ -71,7 +69,7 @@
     </div>
   </section>
 
-  <section class="index-catalog" style="display: none">
+  <section class="index-catalog" style="display: none;">
     <div class="index-catalog__container">
       <h2 class="index-catalog__title">Каталог</h2>
       <div class="index-catalog__inner">
@@ -165,24 +163,7 @@
           </ul>
           <div class="index-catalog__cards">
             {% if products %} {% for product in products %}
-            <div class="index-catalog__card card">
-              <div class="card__image">
-                <img src="{% static 'theme/mb/images/product-4.jpeg' %}" alt="" />
-                {% comment %} {% if product.image %} {% thumbnail product.image "230x230" format="WEBP" crop="center" as im %}
-                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" class="product-click-image" alt="{{product.model}}" title="{{product.model}}" />
-                {% endthumbnail %} {% else %}
-                <img src="{% static 'theme/mb/images/no-image.png' %}" alt="" />
-                {% endif %} {% endcomment %}
-              </div>
-              <div class="card__content">
-                <a href="#" class="card__content-title">{{ product.model }}</a>
-                {% for chr in product.chars.all %} {% if chr.char_name.filter_name == "material" and forloop.counter <= 2 %}
-                <p class="card__content-char">Материал: {{ chr }}</p>
-                {% endif %} {% endfor %}
-                <div class="card__content-price">{{ product.price }} ₽</div>
-              </div>
-              <a href="{{ product.get_absolute_url }}" class="card__content-link">Подробнее</a>
-            </div>
+            {% include '../includes/card.html' with product=product %}
             {% endfor %} {% else %}
             <div class="empty-info">
               <p>Товара нет</p>
@@ -206,13 +187,63 @@
     <div class="index-work__container">
       <h2 class="index-work__title">Наши работы</h2>
       <div class="index-work__links">
-        <a href="#" class="_active">Все</a>
-        <a href="#">Солдатам СВО</a>
-        <a href="#">Арки</a>
-        <a href="#">Мемориальные комплексы</a>
-        <a href="#">С оградкой</a>
+        <a href="#svo" class="_active">Солдатам СВО</a>
+        <a href="#arki">Арки</a>
+        <a href="#memo">Мемориальные комплексы</a>
+        <a href="#sogr">С оградкой</a>
       </div>
-      <div class="index-work__grid">
+      <div class="index-work__grid _active" id="svo">
+        <div class="index-work__item">
+          <img src="{% static 'theme/mb/images/no-image.png' %}" alt="" />
+        </div>
+        <div class="index-work__item">
+          <img src="{% static 'theme/mb/images/product.jpg' %}" alt="" />
+        </div>
+        <div class="index-work__item">
+          <img src="{% static 'theme/mb/images/product.jpg' %}" alt="" />
+        </div>
+        <div class="index-work__item">
+          <img src="{% static 'theme/mb/images/product.jpg' %}" alt="" />
+        </div>
+        <div class="index-work__item">
+          <img src="{% static 'theme/mb/images/product.jpg' %}" alt="" />
+        </div>
+      </div>
+      <div class="index-work__grid" id="arki">
+        <div class="index-work__item">
+          <img src="{% static 'theme/mb/images/product.jpg' %}" alt="" />
+        </div>
+        <div class="index-work__item">
+          <img src="{% static 'theme/mb/images/no-image.png' %}" alt="" />
+        </div>
+        <div class="index-work__item">
+          <img src="{% static 'theme/mb/images/product.jpg' %}" alt="" />
+        </div>
+        <div class="index-work__item">
+          <img src="{% static 'theme/mb/images/product.jpg' %}" alt="" />
+        </div>
+        <div class="index-work__item">
+          <img src="{% static 'theme/mb/images/product.jpg' %}" alt="" />
+        </div>
+      </div>
+      <div class="index-work__grid" id="memo">
+        <div class="index-work__item">
+          <img src="{% static 'theme/mb/images/product.jpg' %}" alt="" />
+        </div>
+        <div class="index-work__item">
+          <img src="{% static 'theme/mb/images/product.jpg' %}" alt="" />
+        </div>
+        <div class="index-work__item">
+          <img src="{% static 'theme/mb/images/no-image.png' %}" alt="" />
+        </div>
+        <div class="index-work__item">
+          <img src="{% static 'theme/mb/images/product.jpg' %}" alt="" />
+        </div>
+        <div class="index-work__item">
+          <img src="{% static 'theme/mb/images/product.jpg' %}" alt="" />
+        </div>
+      </div>
+      <div class="index-work__grid" id="sogr">
         <div class="index-work__item">
           <img src="{% static 'theme/mb/images/product.jpg' %}" alt="" />
         </div>
@@ -232,7 +263,7 @@
     </div>
   </section>
 
-  <section class="index-reviews" style="display: none">
+  <section class="index-reviews">
     <div class="index-reviews__container">
       <div class="index-reviews__inner">
         <div class="index-reviews__info">
@@ -245,18 +276,27 @@
             <div class="reviews__wrapper swiper-wrapper">
               <div class="reviews__slide swiper-slide">
                 <p class="reviews__text">
-                  Заказала памятник и оформление захоронения, сделали всё отлично и раньше срока сдали работу, на отлично, рекомендую надёжная организация. Спасибо большое
+                  Заказала памятник и оформление захоронения, сделали всё отлично и раньше срока сдали работу, на
+                  отлично, рекомендую надёжная организация. Спасибо большое
+                </p>
+                <p class="reviews__name">Nina Kartashova</p>
+              </div>
+              <div class="reviews__slide swiper-slide">
+                <p class="reviews__text">
+                  Заказала памятник и оформление захоронения, сделали всё отлично и раньше срока сдали работу, на
+                  отлично, рекомендую надёжная организация. Спасибо большое
                 </p>
                 <p class="reviews__name">Nina Kartashova</p>
               </div>
             </div>
+            <div class="swiper-pagination"></div>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="index-contact" style="display: none">
+  <section class="index-contact">
     <div class="index-contact__container">
       <div class="index-contact__grid">
         <div class="index-contact__item">
@@ -268,7 +308,8 @@
             </li>
             <li>
               <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
-              <p class="index-contact__list-text"><span>Поможем определиться </span>с типом памятника и заказать его производство</p>
+              <p class="index-contact__list-text"><span>Поможем определиться </span>с типом памятника и заказать его
+                производство</p>
             </li>
             <li>
               <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
@@ -318,7 +359,8 @@
                 <div class="form__agreement">
                   <input type="checkbox" name="agrement" id="id_agrement" checked />
                   <label for="id_agreement" class="form__label">
-                    Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="">политикой конфиденциальности</a>
+                    Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="">политикой
+                      конфиденциальности</a>
                   </label>
                 </div>
               </div>
