--- a/main/core/theme/mb/templates/pages/orders/create.html
+++ b/main/core/theme/mb/templates/pages/orders/create.html
@@ -12,19 +12,22 @@
               <div class="form__group-grid">
                 <div class="form__group">
                   <label for="id_first_name" class="form__label">Имя*:</label>
-                  <input type="text" class="form__controls" id="id_first_name"
-                    value="{% if form.first_name.value %}{{ form.first_name.value }}{% endif %}" name="first_name"
-                    required />
+                  <input
+                    type="text"
+                    class="form__controls"
+                    id="id_first_name"
+                    value="{% if form.first_name.value %}{{ form.first_name.value }}{% endif %}"
+                    name="first_name"
+                    required
+                  />
                 </div>
                 <div class="form__group">
                   <label for="id_email" class="form__label">Email*:</label>
-                  <input type="text" class="form__controls" id="id_email" name="email"
-                    value="{% if form.email.value %}{{ form.email.value }}{% endif %}" required />
+                  <input type="text" class="form__controls" id="id_email" name="email" value="{% if form.email.value %}{{ form.email.value }}{% endif %}" required />
                 </div>
                 <div class="form__group">
                   <label for="id_phone_number" class="form__label">Номер телефона*:</label>
-                  <input type="text" class="form__controls" id="id_phone_number" name="phone" value=""
-                    placeholder="В формате: XXX-XXX-XX-XX" required />
+                  <input type="text" class="form__controls" id="id_phone_number" name="phone" value="" placeholder="В формате: XXX-XXX-XX-XX" required />
                 </div>
               </div>
             </div>
@@ -43,18 +46,14 @@
           </div>
           <div class="order-create__col">
             {% load carts_tag %}{% user_carts request as carts %}
-            <p class="order-create__info-order form__item-title"><span>Информация о заказе</span><span>
-                {{ carts.quantity }}</span>
-            </p>
+            <p class="order-create__info-order form__item-title"><span>Информация о заказе</span><span> {{ carts.quantity }}</span></p>
             {% for cart in carts %}
             <div class="order-create__item">
               <div class="order-create__thumb">
                 {% if cart.product.image %} {% thumbnail cart.product.image "50x50" format="WEBP" crop="center" as im %}
-                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ cart.product.name }}"
-                  title="{{ cart.product.name  }}" />
+                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ cart.product.name }}" title="{{ cart.product.name  }}" />
                 {% endthumbnail %} {% else %}
-                <img src="{% static 'theme/mb/images/no-image.png' %}" alt="{{ cart.product.name }}"
-                  title="{{ cart.product.name  }}" />
+                <img src="{% static 'theme/mb/images/no-image.png' %}" alt="{{ cart.product.name }}" title="{{ cart.product.name  }}" />
                 {% endif %}
               </div>
               <div class="order-create__info">
